# SAE_concept_attribution

./: .gitignore  .gitmodules  algorithm_clustering.py  direction_upstream_features.py  fifty_direction_experiment.json  fifty_direction_experiment.py  gpt_oss_20b_algorithmic_clustering_gsm8k.json  gsm8k_cot.ipynb  gsm8k_cot.py  gsm8k_gemma_scope.py  gsm8k_gemma_scope_first5_generated_tokens.py  gsm8k_gpt_oss_20b_sae_feature_steering.py  minimal_demonstration.ipynb  pyproject.toml  top_sae_features_first5_generated_tokens_gpt_oss_20b.json  top_sae_features_layers_10_30.json
