[project]
name = "sae-concept-attribution"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.4",
    "huggingface>=0.0.1",
    "sae-lens>=6.39.0",
    "torch>=2.11.0",
    "transformers>=5.3.0",
]
