[project]
name = "sae-concept-attribution"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.8.4",
    "huggingface>=0.0.1",
    "kernels>=0.12.0",
    "sae-lens>=6.39.0",
    "torch==2.9.0",
    "transformers<5",
    "vllm>=0.2.5",
]
